# ctest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  run.sh
include/: constants.h  ecs.h  game.h  game.hpp  structs.h  texman.h
src/: ecs.c  game.c  game.cpp  main.c  main.cpp  texman.cpp
